Updates to App.java Passed all test for G